# KITT_CV_JAN

./: .gitignore  CMakeLists.txt  Config.h.in  KCVJ_LIB.md  README.md  doxyfile
DOC/: customdoxygen.css
DOC/html/: _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _circle_marker_8cpp.html  _circle_marker_8cpp.js  _circle_marker_8h.html  _circle_marker_8h.js  _circle_marker_8h_source.html  _k_c_v_j_8md.html  _k_c_v_j___l_i_b_8md.html  _profiling_8cpp.html  _profiling_8cpp.js  _r_e_a_d_m_e.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated.js  class_camera-members.html  class_camera.html  class_camera.js  class_circle_marker-members.html  class_circle_marker.html  class_circle_marker.js  class_suspected_circle_marker-members.html  class_suspected_circle_marker.html  class_suspected_circle_marker.js  classes.html  dir_2f907bc4bef6117b6f17ce29db19c8e6.html  dir_2f907bc4bef6117b6f17ce29db19c8e6.js  dir_63be206985419c7a9ae1d98bc5813caf.html  dir_63be206985419c7a9ae1d98bc5813caf.js  dir_88356f14b839601d24e047afa0d537a5.html  dir_88356f14b839601d24e047afa0d537a5.js  files.html  files.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  (+8 more)
DOC/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_1.js  functions_2.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  search.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
aruco_test/src/: aruco_test.cpp
calibration/src/: calibration.cpp
feature_test/src/: feature_test.cpp
headers/: Camera.h  CircleMarker.h  Config.h  RemoteControl.h
hough_circle_test/src/: hough_circle_test.cpp
kcvj/headers/: Camera.h  CircleMarker.h
kcvj/src/: Camera.cpp  CircleMarker.cpp  Profiling.cpp
kcvj_demo/headers/: Profiling.h  RemoteControl.h  kcvj_demo.h
kcvj_demo/src/: RemoteControl.cpp  Settings.cpp  kcvj_demo.cpp
kcvj_minimal/src/: kcvj_minimal.cpp
kcvj_multicam/src/: kcvj_multicam.cpp
kcvj_stream/src/: kcvj_stream.cpp
kcvj_win/src/: kcvj_win.cpp
resources/: default.yml
resources/UnityDemo/Assets/: optitrack_logger.unity  perspective_tests.unity  tracking_demo.unity
resources/UnityDemo/Assets/KITT/Materials/: BLUE.mat  CALIBRATE.mat  GREEN.mat  KITT.mat  MAGENTA.mat  MARKER.mat  ORANGE.mat  RED.mat  Target.prefab  YELLOW.mat
resources/UnityDemo/Assets/KITT/Scripts/: CamTest.cs  DatagramListener.cs  OptiTrackTestRun.cs  SetupTestCamera.cs  TrackingReceiver.cs
resources/UnityDemo/Assets/OptiTrackUnity/: DirectMulticastSocketClient.cs  OptitrackManager.cs  SkeletonClass.cs  StreamData.cs
resources/UnityDemo/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
resources/UnityDemoBuild/UnityDemoBuild_Data/: OVRAppInfo  PlayerConnectionConfigFile  mainData  sharedassets0.assets
resources/calibration/: logitech.yml  logitech800x600.yml  macbook.yml  macbook640x480.yml  philips800x600.yml  unity.xml
resources/demo/: default.yml  optitrack_test.yml
resources/demoSettings/: capture_camera.yml  default.yml  test_sequence.yml
resources/remoteControl/: RemoteControlWebClient.js
resources/remoteControl/app/: controller.js  index.html  style.css
resources/stats/: ErrorMapOptitrack.m  ErrorMapper.m  JitterPos.m  Performance.m  VertexJitter.m  jitter_pos.csv  jitter_pos_far.csv  myfile.tex  optitrack_03.csv  optitrack_05.csv  optitrack_05_macbook.csv  optitrack_07.csv  optitrack_10.csv  output_bb.csv  output_bb_live.csv  output_mb.csv  position_mesh.tikz  position_path.tikz  slace_speed.tikz  speed_resolution.tikz  time_resolution.tikz  vertex_jitter.csv
resources/tests/optitrack/: optitrack_truth.csv
src/: CircleMarker.cpp  Main.cpp  RemoteControl.cpp
